--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.1",
+    "chart.js": "2.9.4",
     "react-dom": "^17.0.1",
+    "react-chartjs-2": "2.11.1",
     "react-scripts": "4.0.3",
+    "react-icons": "4.2.0",
+    "react-modal": "3.12.1",
+    "react-router-dom": "5.2.0",
+    "react-spring": "8.0.27",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
